fixed alignment of info section, changed colors

--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ ul {
     color: #F2F2F2;
 }
 
+h1 {
+    font-size: 48px;
+    font-weight: bold;
+    padding-bottom: 0;
+}
+
 #content_img {
     border-radius: 10px;
     width: 100%;
@@ -54,10 +60,37 @@ button {
 .info {
     display: flex;
     flex-direction: column;
+    background-color: #F2F2F2;
+}
+
+h2 {
+    font-size: 36px;
+    color: #262223;
+    text-align: center;
 }
 
 .info img {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
+    border-radius: 10px;
+    border: 4px solid;
+    border-color: #267302;
+}
+
+.services {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+}
+
+.svcpair {
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+}
+
+.quote {
+    
 }
